--- a/01-webotron/Pipfile
+++ b/01-webotron/Pipfile
@@ -5,6 +5,10 @@ verify_ssl = true
 
 [dev-packages]
 ipython = "*"
+pycodestyle = "*"
+pydocstyle = "*"
+pylint = "*"
+pyflakes = "*"
 
 [packages]
 boto3 = "*"
