Prepare webotron for packaging and distribution

--- a/01-webotron/Pipfile
+++ b/01-webotron/Pipfile
@@ -1,7 +1,11 @@
 [[source]]
-name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
+name = "pypi"
+
+[packages]
+"boto3" = "*"
+click = "*"
 
 [dev-packages]
 ipython = "*"
@@ -9,10 +13,7 @@ pycodestyle = "*"
 pydocstyle = "*"
 pylint = "*"
 pyflakes = "*"
-
-[packages]
-boto3 = "*"
-click = "*"
+setuptools = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.6"
