Add configuration for notifier service.

--- a/02-notifon/notifier/serverless.yml
+++ b/02-notifon/notifier/serverless.yml
@@ -23,8 +23,10 @@ service: notifon-notifier
 provider:
   name: aws
   runtime: python3.7
-  profile: pythonAutomation
+  profile: ${file(../config.${self:provider.stage}.json):notifier.profile}
   region: us-east-1
+  environment:
+    SLACK_WEBHOOK_URL: ${file(../config.${self:provider.stage}.json):notifier.slack_webhook_url}
 
 # you can overwrite defaults here
 #  stage: dev
@@ -60,8 +62,8 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  post-to-slack:
+    handler: handler.post_to_slack
     events:
       - cloudwatchEvent:
           event:
